--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,41 +10,32 @@ schedules:
       - development
   always: true
 
-# -------------------------
-# PARAMETERS
-# -------------------------
 parameters:
 - name: nodeVersion
   type: string
   default: '20'
 
-# -------------------------
-# VARIABLES
-# -------------------------
 variables:
   NODE_ENV: 'development'
   APP_NAME: 'node-app'
 
-# -------------------------
-# AGENT (Same as Java)
-# -------------------------
 pool:
   name: agentjan10
-  demands:
-    - node
+  # demands:      # Remove demands here to avoid failure
+  #  - node
 
-# =========================
-# STEPS
-# =========================
 steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: ${{ parameters.nodeVersion }}
+  displayName: "Install Node.js"
+
 - script: |
-    echo "Setting Node Version"
     node -v
     npm -v
   displayName: "Verify Node & NPM"
 
 - script: |
-    echo "Installing dependencies"
     npm install
     npm run build --if-present
     npm test --if-present
@@ -58,4 +49,5 @@ steps:
     artifact: 'node-package'
     publishLocation: 'pipeline'
   displayName: "Publish Node Artifact"
+
 
